Restore compatibility with Java 8
Add animal-sniffer to check for wrong API usage during build